crates/nash-solve/tests/snapshots/inference__recovery_poisoned_tuple_child_keeps_independent_type_mismatches-2.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nbad : ((), ())\nbad = (\\x -> x, (assert Primitive.True).field)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( unit, unit )`, found `( 'a -> 'a, ? )`.
   ╭─[Main.nash:3:7]
 1 │ module Main exposing (..)
 2 │ bad : ((), ())
   ·       ────┬───
   ·           ╰── declared type
 3 │ bad = (\x -> x, (assert Primitive.True).field)
   ·       ────────────────────┬───────────────────
   ·                           ╰── body of `bad`
   ╰────


nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:3:17]
 2 │ bad : ((), ())
 3 │ bad = (\x -> x, (assert Primitive.True).field)
   ·                 ──────────────┬──────────────
   ·                               ╰── field `field` access
   ╰────
