crates/nash-solve/tests/snapshots/inference__recovery_poisoned_tuple_child_keeps_independent_type_mismatches-7.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nbad : (((), ()), ())\nbad = ((().field, ()), \\x -> x)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( ( ?, unit ), unit )`,
  │ found `( ( ?, unit ), 'a -> 'a )`.
   ╭─[Main.nash:3:7]
 1 │ module Main exposing (..)
 2 │ bad : (((), ()), ())
   ·       ───────┬──────
   ·              ╰── declared type
 3 │ bad = ((().field, ()), \x -> x)
   ·       ────────────┬────────────
   ·                   ╰── body of `bad`
   ╰────


nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:3:9]
 2 │ bad : (((), ()), ())
 3 │ bad = ((().field, ()), \x -> x)
   ·         ────┬───
   ·             ╰── field `field` access
   ╰────
