crates/nash-solve/tests/snapshots/inference__recovery_poisoned_tuple_child_keeps_independent_type_mismatches-8.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nbad : ((), ((), ()))\nbad = (\\x -> x, ((), ().field))\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( unit, ( unit, unit ) )`,
  │ found `( 'a -> 'a, ( unit, ? ) )`.
   ╭─[Main.nash:3:7]
 1 │ module Main exposing (..)
 2 │ bad : ((), ((), ()))
   ·       ───────┬──────
   ·              ╰── declared type
 3 │ bad = (\x -> x, ((), ().field))
   ·       ────────────┬────────────
   ·                   ╰── body of `bad`
   ╰────


nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:3:22]
 2 │ bad : ((), ((), ()))
 3 │ bad = (\x -> x, ((), ().field))
   ·                      ────┬───
   ·                          ╰── field `field` access
   ╰────
