crates/nash-solve/tests/snapshots/inference__recovery_poisoned_tuple_child_keeps_independent_type_mismatches.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nbad : ((), ())\nbad = ((assert Primitive.True).field, \\x -> x)\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( ?, unit )`, found `( ?, 'a -> 'a )`.
   ╭─[Main.nash:3:7]
 1 │ module Main exposing (..)
 2 │ bad : ((), ())
   ·       ────┬───
   ·           ╰── declared type
 3 │ bad = ((assert Primitive.True).field, \x -> x)
   ·       ────────────────────┬───────────────────
   ·                           ╰── body of `bad`
   ╰────


nash::type::not_a_record

  × Expected a record, found `unit`.
   ╭─[Main.nash:3:8]
 2 │ bad : ((), ())
 3 │ bad = ((assert Primitive.True).field, \x -> x)
   ·        ──────────────┬──────────────
   ·                      ╰── field `field` access
   ╰────
