crates/nash-solve/tests/snapshots/inference__recovery_reports_an_independent_escaping_annotation_and_blocks_its_uses.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\nmismatch : ()\nmismatch = \\x -> x\nouter x =\n    let\n        inner : 'a\n        inner = x\n    in\n    (inner (), x ())\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
   ╭─[Main.nash:3:12]
 1 │ module Main exposing (..)
 2 │ mismatch : ()
   ·            ─┬
   ·             ╰── declared type
 3 │ mismatch = \x -> x
   ·            ───┬───
   ·               ╰── body of `mismatch`
 4 │ outer x =
   ╰────


nash::type::annotation_variable_escapes

  × Annotation for `inner` quantifies type variable `'a`, already fixed by the enclosing scope.
   ╭─[Main.nash:7:9]
 6 │         inner : 'a
 7 │         inner = x
   ·         ─────
 8 │     in
   ╰────
  help: Use the enclosing variable without quantifying it again.
