crates/nash-solve/tests/snapshots/inference__recovery_resolution_limit_keeps_unrelated_obligations.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\ntrait Missing 'a where\n    missing : 'a -> 'a\nimpl Keep (list (list 'a)) => Keep (list 'a) where\n    keep xs = xs\nvalue = (keep [(assert Primitive.True)], missing (assert Primitive.True))\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
    ╭─[Main.nash:10:11]
  8 │ value = (keep [(assert Primitive.True)], missing (assert Primitive.True))
  9 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 10 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────


nash::type::impl_resolution_limit

  × Impl resolution for `Keep` in `keep` exceeded the work limit.
   ╭─[Main.nash:8:10]
 7 │     keep xs = xs
 8 │ value = (keep [(assert Primitive.True)], missing (assert Primitive.True))
   ·          ────
 9 │ sibling : ()
   ╰────
  help: This requirement remains unchecked; other reported errors still apply.

        Simplify cyclic or growing impl constraints.


nash::type::missing_impl

  × No impl for `Missing unit`.
   ╭─[Main.nash:8:42]
 7 │     keep xs = xs
 8 │ value = (keep [(assert Primitive.True)], missing (assert Primitive.True))
   ·                                          ───┬───
   ·                                             ╰── required by `missing`
 9 │ sibling : ()
   ╰────
  help: Import or define an impl for `Missing unit`.
