crates/nash-solve/tests/snapshots/inference__recovery_shared_partial_unification_does_not_create_trait_or_call_cascades.snap
---
source: crates/nash-solve/tests/inference.rs
description: "module Main exposing (..)\ntrait Need 'a where\n    need : 'a -> ()\nouter x =\n    let\n        broken : ((), ())\n        broken = (x, \\y -> y)\n    in\n    (x (), need x, broken)\nsibling : ()\nsibling = \\x -> x\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `( unit, unit )`, found `( unit, 'a -> 'a )`.
   ╭─[Main.nash:7:18]
 5 │     let
 6 │         broken : ((), ())
   ·                  ────┬───
   ·                      ╰── declared type
 7 │         broken = (x, \y -> y)
   ·                  ──────┬─────
   ·                        ╰── body of `broken`
 8 │     in
   ╰────


nash::type::mismatch

  × Type mismatch: expected `unit`, found `'a -> 'a`.
    ╭─[Main.nash:11:11]
  9 │     (x (), need x, broken)
 10 │ sibling : ()
    ·           ─┬
    ·            ╰── declared type
 11 │ sibling = \x -> x
    ·           ───┬───
    ·              ╰── body of `sibling`
    ╰────
